# ps5-capture

./: CMakeLists.txt  gstwidget.cpp  gstwidget.h  install_script.sh  main.cpp  mainwindow.cpp  mainwindow.h  readme.md  resources.qrc
